--- a/client/mean-chat/src/app/home/home.component.html
+++ b/client/mean-chat/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home-container">
+    <app-chat-list></app-chat-list>
+    <app-chat></app-chat>
+    <app-contacts></app-contacts>
+</div>
