--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -1,1 +1,7 @@
-<p>chat works!</p>
+<div class="chat-container">
+    <div>Messages list!</div>
+    <form>
+        <input type="text"/>
+        <button type="submit">Enter</button>
+    </form>
+</div>
