fix errors, create chat list html

--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -1,11 +1,10 @@
 <div class="chat-container">
   <div class="chat-header">
-    <!-- Add your chat header content here -->
+    <!-- chatroom name/title -->
   </div>
 
   <div class="chat-messages">
-    <!-- Display chat messages here -->
-    <!-- Example of displaying messages -->
+    <!-- list of chat messages -->
     <div class="message" *ngFor="let message of messages">
       <div class="message-sender">{{ message.sender }}</div>
       <div class="message-content">{{ message.text }}</div>
