--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -1,1 +1,7 @@
-<p>user-chat-list works!</p>
+<div class="chat-list-container">
+  <div class="chat-list">
+    <div *ngFor="let chatroom of chatrooms" class="chat-list-item" (click)="setActiveChat(chatroom)">
+      {{ chatroom.name }}
+    </div>
+  </div>
+</div>
