--- a/client/mean-chat/src/app/login/login.component.html
+++ b/client/mean-chat/src/app/login/login.component.html
@@ -1,14 +1,11 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" [(ngModel)]="user.email" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" [(ngModel)]="user.password" required>
-    </div>
-    <button type="submit">Login</button>
-  </form>
-</div>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" formControlName="email" required>
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" id="password" formControlName="password" required>
+  </div>
+  <button type="submit">Login</button>
+</form>
