--- a/client/mean-chat/src/app/registration/registration.component.html
+++ b/client/mean-chat/src/app/registration/registration.component.html
@@ -1,17 +1,17 @@
 <div class="registration-container">
   <h2>Register</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" [(ngModel)]="user.name" required>
+      <input type="text" id="name" formControlName="name" required>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" [(ngModel)]="user.email" required>
+      <input type="email" id="email" formControlName="email" required>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" [(ngModel)]="user.password" required>
+      <input type="password" id="password" formControlName="password" required>
     </div>
     <button type="submit">Register</button>
   </form>
