fix websocket initialization and add link to register page

--- a/client/mean-chat/src/app/login/login.component.html
+++ b/client/mean-chat/src/app/login/login.component.html
@@ -9,3 +9,4 @@
   </div>
   <button type="submit">Login</button>
 </form>
+<p>Don't have an account? <a [routerLink]="['/register']">Register here</a></p>
