--- a/client/mean-chat/src/app/home/home.component.html
+++ b/client/mean-chat/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="home-container">
+    <button (click)="logout()">Logout</button>
     <app-chat-list></app-chat-list>
     <app-chat></app-chat>
     <app-contacts></app-contacts>
