--- a/client/mean-chat/src/app/contacts/contacts.component.html
+++ b/client/mean-chat/src/app/contacts/contacts.component.html
@@ -1,1 +1,20 @@
-<p>contacts works!</p>
+<div class="contacts-container">
+  <div class="new-contact-form">
+    <h2>Add a Contact</h2>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" [(ngModel)]="newContactEmail" required>
+      </div>
+      <button type="submit">Add Contact</button>
+    </form>
+  </div>
+  <div class="contacts-list">
+    <h2>Contacts</h2>
+    <ul>
+      <li *ngFor="let contact of contacts">
+        {{ contact.name }}
+      </li>
+    </ul>
+  </div>
+</div>
