fix chatexists function, add chat to active chat if it exists

--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -2,7 +2,7 @@
   <h3>Chat-List</h3>
   <div class="chat-list">
     <div *ngFor="let chatroom of chatrooms" class="chat-list-item" (click)="setActiveChat(chatroom)">
-      {{ chatroom.name }}
+      Chatroom name: {{ chatroom.name }}
     </div>
   </div>
 </div>
