--- a/client/mean-chat/src/app/contacts/contacts.component.html
+++ b/client/mean-chat/src/app/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <div class="contacts-container">
   <div class="new-contact-form">
     <h2>Add a Contact</h2>
-    <form (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="addNewContact()">
       <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" [(ngModel)]="newContactEmail" required>
@@ -14,6 +14,7 @@
     <ul>
       <li *ngFor="let contact of contacts">
         {{ contact.name }}
+        <button (click)="openChat(contact)">Chat</button>
       </li>
     </ul>
   </div>
