--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -1,9 +1,7 @@
 <div class="chat-container" *ngIf="activeChat">
   <div class="chat-header">
     <h2>
-      <ng-container
-        *ngFor="let participant of participants; let last = last"
-      >
+      <ng-container *ngFor="let participant of participants; let last = last">
         {{ participant.name }}
         <span *ngIf="!last">, </span>
       </ng-container>
@@ -15,6 +13,9 @@
     <div class="message" *ngFor="let message of messages">
       <div class="message-sender">{{ message.sender }}</div>
       <div class="message-content">{{ message.text }}</div>
+    </div>
+    <div *ngIf="messages.length === 0" class="no-messages">
+      Send a message to get started
     </div>
   </div>
 
