--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -11,7 +11,7 @@
   <div class="chat-messages">
     <!-- list of chat messages -->
     <div class="message" *ngFor="let message of messages">
-      <div class="message-sender">{{ message.sender }}</div>
+      <div class="message-sender">{{ message.sender.name }}:</div>
       <div class="message-content">{{ message.text }}</div>
     </div>
     <div *ngIf="messages.length === 0" class="no-messages">
