replace contacts list in group chat form with filtered contacts

--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -24,7 +24,7 @@
     ></app-search-display>
 
     <ul>
-      <li *ngFor="let contact of contacts">
+      <li *ngFor="let contact of filteredContacts">
         {{ contact.name }}
         <button
           *ngIf="!this.newGroupParticipants.includes(contact._id)"
