delete chatroom route on backend, deleteChatRoom function on frontend and corresponding html

--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -12,6 +12,9 @@
         </button>
       </ng-container>
     </h2>
+    <div *ngIf="activeChat.owner === currentUser._id">
+      <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
+    </div>
   </div>
 
   <div class="chat-messages">
