change owner to admins array in chatroomschema, adjust frontend to match

--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -12,7 +12,7 @@
         </button>
       </ng-container>
     </h2>
-    <div *ngIf="activeChat.owner === currentUser._id">
+    <div *ngIf="activeChat.admins.includes(currentUser._id)">
       <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
     </div>
   </div>
