--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -1,17 +1,35 @@
 <div class="chat-container" *ngIf="activeChat">
   <div class="chat-header">
-    <h2>
-      <ng-container *ngFor="let participant of participants; let last = last">
-        {{ participant.name }}
-        <span *ngIf="!last">, </span>
-        <button
-          *ngIf="!participant.inUserContacts"
-          (click)="addToContacts(participant.email)"
-        >
-          Add to Contacts
-        </button>
-      </ng-container>
-    </h2>
+    <div *ngIf="this.promoteMembers">
+      <h2>
+        <ng-container *ngFor="let participant of participants; let last = last">
+          {{ participant.name }}
+          <span *ngIf="!last">, </span>
+          <button
+            *ngIf="!activeChat.admins.includes(participant._id)"
+            (click)="promoteToAdmin(participant._id)"
+          >
+            Promote to Admin
+          </button>
+        </ng-container>
+      </h2>
+      <button (click)="togglePromoteMembers()">Cancel</button>
+    </div>
+    <div *ngIf="!this.promoteMembers">
+      <h2>
+        <ng-container *ngFor="let participant of participants; let last = last">
+          {{ participant.name }}
+          <span *ngIf="!last">, </span>
+          <button
+            *ngIf="!participant.inUserContacts"
+            (click)="addToContacts(participant.email)"
+          >
+            Add to Contacts
+          </button>
+        </ng-container>
+      </h2>
+      <button (click)="togglePromoteMembers()">Promote Members</button>
+    </div>
     <div *ngIf="activeChat.admins.includes(currentUser._id)">
       <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
     </div>
