client adds chatroom to chatlist upon receiving a message belonging to a new chatroom while logged in

--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -28,12 +28,17 @@
           </button>
         </ng-container>
       </h2>
-      <button (click)="togglePromoteMembers()">Promote Members</button>
+      <button
+        *ngIf="activeChat.admins && (activeChat.admins.includes(currentUser._id))"
+        (click)="togglePromoteMembers()"
+      >
+        Promote Members
+      </button>
     </div>
     <div>
-      <button (click)="leaveChat()">Leave Chat</button>
+      <button *ngIf="activeChat.name !== 'User-User'" (click)="leaveChat()">Leave Chat</button>
     </div>
-    <div *ngIf="activeChat.admins.includes(currentUser._id)">
+    <div *ngIf="activeChat.admins && (activeChat.admins.includes(currentUser._id))">
       <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
     </div>
   </div>
