--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -46,8 +46,8 @@
       class="chat-list-item"
       (click)="setActiveChat(chatroom)"
     >
-      <h2 *ngIf="chatroom.name">{{ chatroom.name }}</h2>
-      <h2 *ngIf="!chatroom.name">
+      <h2 *ngIf="chatroom.name && (chatroom.name !== 'User-User')">{{ chatroom.name }}</h2>
+      <h2 *ngIf="chatroom.name === 'User-User'">
         <ng-container
           *ngFor="
             let participant of chatroom.participants;
