general container css

--- a/client/mean-chat/src/app/home/home.component.html
+++ b/client/mean-chat/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="home-container">
-    <button (click)="logout()">Logout</button>
+  <button (click)="logout()">Logout</button>
+  <div class="main-container">
     <app-chat-list></app-chat-list>
     <app-chat></app-chat>
     <app-contacts></app-contacts>
+  </div>
 </div>
