--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -29,16 +29,20 @@
         </ng-container>
       </h2>
       <button
-        *ngIf="activeChat.admins && (activeChat.admins.includes(currentUser._id))"
+        *ngIf="activeChat.admins && activeChat.admins.includes(currentUser._id)"
         (click)="togglePromoteMembers()"
       >
         Promote Members
       </button>
     </div>
     <div>
-      <button *ngIf="activeChat.name !== 'User-User'" (click)="leaveChat()">Leave Chat</button>
+      <button *ngIf="activeChat.name !== 'User-User'" (click)="leaveChat()">
+        Leave Chat
+      </button>
     </div>
-    <div *ngIf="activeChat.admins && (activeChat.admins.includes(currentUser._id))">
+    <div
+      *ngIf="activeChat.admins && activeChat.admins.includes(currentUser._id)"
+    >
       <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
     </div>
   </div>
@@ -66,4 +70,6 @@
   </div>
 </div>
 
-<div class="no-chat-selected" *ngIf="!activeChat">No chat selected</div>
+<div class="chat-container" *ngIf="!activeChat">
+  <div class="no-chat-selected">No chat selected</div>
+</div>
