--- a/client/mean-chat/src/app/login/login.component.html
+++ b/client/mean-chat/src/app/login/login.component.html
@@ -1,12 +1,14 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" id="email" formControlName="email" required>
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" id="password" formControlName="password" required>
-  </div>
-  <button type="submit">Login</button>
-</form>
-<p>Don't have an account? <a [routerLink]="['/register']">Register here</a></p>
+<div class="login-container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" formControlName="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" formControlName="password" required>
+    </div>
+    <button type="submit" class="action-button">Login</button>
+  </form>
+  <p>Don't have an account? <a [routerLink]="['/register']">Register here</a></p>
+</div>
