--- a/client/mean-chat/src/app/home/home.component.css
+++ b/client/mean-chat/src/app/home/home.component.css
@@ -1,4 +1,10 @@
 .main-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+
+.home-top {
+  display: flex;
+  justify-content: flex-end;
 }
