--- a/client/mean-chat/src/app/registration/registration.component.html
+++ b/client/mean-chat/src/app/registration/registration.component.html
@@ -1,5 +1,4 @@
 <div class="registration-container">
-  <h2>Register</h2>
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
@@ -15,4 +14,5 @@
     </div>
     <button type="submit">Register</button>
   </form>
+  <p>Already have an account? <a [routerLink]="['/login']">Login here</a></p>
 </div>
