--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -4,64 +4,13 @@
   <!-- Create New Chat Button -->
   <div *ngIf="!createGroupChatForm">
     <button class="action-button" (click)="toggleGroupChatForm()">Create New Chat</button>
+    <app-display-chat-list></app-display-chat-list>
   </div>
 
   <!-- Create Group Chat Form -->
   <div *ngIf="createGroupChatForm" class="create-group-chat-form">
-    <div>
-      <label for="new_group_name">Title: </label>
-      <input
-        type="text"
-        id="new_group_name"
-        name="new_group_name"
-        [(ngModel)]="newGroupName"
-      />
-    </div>
-    <button class="action-button" (click)="createGroupChat()">Create</button>
     <button class="action-button" (click)="toggleGroupChatForm()">Discard</button>
-
-    <!-- Search Bar and Display -->
-    <app-search-bar (searchQueryChanged)="onSearchQueryChanged($event)"></app-search-bar>
-    <app-search-display [filteredContacts]="filteredContacts"></app-search-display>
-
-    <!-- Participants List -->
-    <ul class="participants-list">
-      <li *ngFor="let contact of filteredContacts">
-        {{ contact.name }}
-        <button
-          *ngIf="!this.newGroupParticipants.includes(contact._id)"
-          class="action-button"
-          (click)="addToGroupChat(contact._id)"
-        >
-          Add to Chat
-        </button>
-        <button
-          *ngIf="this.newGroupParticipants.includes(contact._id)"
-          class="action-button"
-          (click)="removeFromGroupChat(contact._id)"
-        >
-          Remove from Chat
-        </button>
-      </li>
-    </ul>
+    <app-create-group-chat-form></app-create-group-chat-form>
   </div>
 
-  <!-- Chat List -->
-  <div class="chat-list">
-    <div
-      *ngFor="let chatroom of chatrooms; let last = last"
-      class="chat-list-item"
-      (click)="setActiveChat(chatroom)"
-    >
-      <h2 *ngIf="chatroom.name && (chatroom.name !== 'User-User')">{{ chatroom.name }}</h2>
-      <h2 *ngIf="chatroom.name === 'User-User'">
-        <ng-container *ngFor="let participant of chatroom.participants; let lastParticipant = last">
-          <span *ngIf="participant._id !== (dataService.userData$ | async)?._id">
-            {{ participant.name }}
-            <span *ngIf="!lastParticipant && chatroom.participants.length > 2">, </span>
-          </span>
-        </ng-container>
-      </h2>
-    </div>
-  </div>
 </div>
