--- a/client/mean-chat/src/app/registration/registration.component.html
+++ b/client/mean-chat/src/app/registration/registration.component.html
@@ -2,17 +2,25 @@
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" formControlName="name" required>
+      <input type="text" id="name" formControlName="name" required />
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" formControlName="email" required>
+      <input type="email" id="email" formControlName="email" required />
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" formControlName="password" required>
+      <input
+        type="password"
+        id="password"
+        formControlName="password"
+        required
+      />
     </div>
     <button type="submit">Register</button>
   </form>
   <p>Already have an account? <a [routerLink]="['/login']">Login here</a></p>
+  <div *ngIf="errorMessage">
+    <p>{{ errorMessage }}</p>
+  </div>
 </div>
