--- a/client/mean-chat/src/app/chat-list/chat-list.component.html
+++ b/client/mean-chat/src/app/chat-list/chat-list.component.html
@@ -1,5 +1,5 @@
-<div class="chat-list-container">
-  <h3>Chat List</h3>
+<div class="side-section-container">
+  <h3>Your Chats:</h3>
 
   <!-- Create New Chat Button -->
   <div *ngIf="!createGroupChatForm">
