--- a/client/mean-chat/src/app/contacts/contacts.component.html
+++ b/client/mean-chat/src/app/contacts/contacts.component.html
@@ -14,8 +14,8 @@
     <ul>
       <li *ngFor="let contact of contacts">
         {{ contact.name }}
-        <button (click)="openChat(contact)">Chat</button>
-        <button (click)="deleteContact(contact._id)">Delete Contact</button>
+        <button class="action-button create-button" (click)="openChat(contact)">Chat</button>
+        <button class="action-button remove-button" (click)="deleteContact(contact._id)">Delete Contact</button>
       </li>
     </ul>
   </div>
