--- a/client/mean-chat/src/app/chat/chat.component.html
+++ b/client/mean-chat/src/app/chat/chat.component.html
@@ -28,23 +28,27 @@
           </button>
         </ng-container>
       </h3>
+    </div>
+    <div class="chat-controls" *ngIf="chatControls">
       <button
         *ngIf="activeChat.admins && activeChat.admins.includes(currentUser._id)"
         (click)="togglePromoteMembers()"
+        class="action-button"
       >
         Promote Members
       </button>
-    </div>
-    <div>
-      <button *ngIf="activeChat.name !== 'User-User'" (click)="leaveChat()">
+      <button *ngIf="activeChat.name !== 'User-User'" (click)="leaveChat()" class="action-button warning-button">
         Leave Chat
       </button>
+      <button
+        *ngIf="activeChat.admins && activeChat.admins.includes(currentUser._id)"
+        (click)="deleteChatRoom(activeChat._id)"
+        class="action-button danger-button"
+      >
+        Delete Chatroom
+      </button>
     </div>
-    <div
-      *ngIf="activeChat.admins && activeChat.admins.includes(currentUser._id)"
-    >
-      <button (click)="deleteChatRoom(activeChat._id)">Delete Chatroom</button>
-    </div>
+    <button class="action-button settings-button" (click)="toggleChatControls()">Chat Controls</button>
   </div>
 
   <div class="chat-messages">
